# cmakePractice

./: .gitignore  README.md
CmakeTestProject/: CMakeLists.txt
CmakeTestProject/common/include/: api1.h  api2.h  common.h  condition_var_example.h  future_async_example.h
CmakeTestProject/common/src/: api1.cpp  api2.cpp
CmakeTestProject/dynamiclib/: CMakeLists.txt
CmakeTestProject/dynamiclib/include/: dynamiclib.h
CmakeTestProject/dynamiclib/src/: dynamiclib.cpp
CmakeTestProject/project1/: CMakeLists.txt
CmakeTestProject/project1/src/: main.cpp
CmakeTestProject/project2_link_lib/: CMakeLists.txt
CmakeTestProject/project2_link_lib/src/: main.cpp
CmakeTestProject/project3_link_staticlib/: CMakeLists.txt
CmakeTestProject/project3_link_staticlib/include/: main.h
CmakeTestProject/project3_link_staticlib/src/: main.cpp
CmakeTestProject/project4_link_dynamiclib/: CMakeLists.txt
CmakeTestProject/project4_link_dynamiclib/src/: main.cpp
CmakeTestProject/staticlib1/: CMakeLists.txt
CmakeTestProject/staticlib1/include/: staticlib1.h
CmakeTestProject/staticlib1/src/: staticlib.cpp
CmakeTestProject/staticlib2/: CMakeLists.txt
CmakeTestProject/staticlib2/include/: staticlib2.h
CmakeTestProject/staticlib2/src/: staticlib.cpp
CmakeTestProject2/: global.cmake  linker.cmake
CmakeTestProject2/common/: common.h
CmakeTestProject2/common/common_module1/: CMakeLists.txt  common_module1.h  function1.cpp  function2.cpp
CmakeTestProject2/common/common_module2/: CMakeLists.txt  common_module2.h  function1.cpp  function2.cpp
CmakeTestProject2/project1/: CMakeLists.txt  build.sh  clean.sh  main.cpp
CmakeTestProject2/project1/test_module1/: test_module1.h
CmakeTestProject2/project2/: CMakeLists.txt  main.cpp
CmakeTestProject2/project2/test_module1/: CMakeLists.txt  function1.cpp  function2.cpp
CmakeTestProject2/project2/test_module2/: CMakeLists.txt  function1.cpp  function2.cpp  test_module2.h
